--- a/usr.bin/sup/src/sup.1
+++ b/usr.bin/sup/src/sup.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: src/usr.bin/sup/src/Attic/sup.1,v 1.9 2000/03/14 21:31:42 aaron Exp $
+.\"	$OpenBSD: src/usr.bin/sup/src/Attic/sup.1,v 1.10 2001/04/20 22:28:03 espie Exp $
 .\"
 .\" Copyright (c) 1992 Carnegie Mellon University
 .\" All Rights Reserved.
@@ -25,6 +25,11 @@
 .\"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 .\" HISTORY
 .\" $Log: sup.1,v $
+.\" Revision 1.9  2000/03/14 21:31:42  aaron
+.\" Suffix "i.e." and "e.g." with a comma. Just another really picky man page
+.\" commit, as we want our documentation to be as consistently formatted as
+.\" possible (it's getting there :-)).
+.\"
 .\" Revision 1.8  1999/09/23 04:12:09  alex
 .\" Typo fixes.
 .\"
@@ -672,7 +677,7 @@ the scan files for the different releases separate.
 to allow different host restrictions for this release.
 .I next=<release>
 used to chain releases together. This has the effect of making one release
-be a combination of serveral other releases. If the same file appears in
+be a combination of several other releases. If the same file appears in
 more than one chained release, the first one found will be used.
 If these files are not specified for a release the default names:
 prefix,list,scan and host will be used.
