--- a/distrib/notes/i386/install
+++ b/distrib/notes/i386/install
@@ -34,10 +34,9 @@ OpenBSDInstallPart2
 OpenBSDBootMsgs
 
 	While booting, you will probably see several warnings.  You
-	should be warned that no swap space is present, and that
-	init(8) cannot find /etc/rc.  Do not be alarmed, these are
-	completely normal.  When you reach the prompt asking you for a
-	shell name, just hit return.
+	should be warned that no swap space is present.  Do not be
+	alarmed, these are completely normal.  When you reach the prompt
+	asking you for a shell name, just hit return.
 
 	Now you will be asked whether you wish to do an "install"
 	or an "upgrade".  Enter 'i' for a fresh install or 'u' to
